[gd_scene load_steps=2 format=3 uid="uid://chyqjehe0nmxq"]

[ext_resource type="Script" path="res://scripts/ModReinstallDialog.gd" id="1"]

[node name="ModReinstallDialog" type="Window"]
visible = false
script = ExtResource("1")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
size_flags_vertical = 4

[node name="Label" type="Label" parent="Panel/Margin/VBox"]
layout_mode = 2
text = "(this text is assigned at runtime)
(this text is assigned at runtime)"

[node name="Spacer" type="Control" parent="Panel/Margin/VBox"]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Panel/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4

[node name="BtnYes" type="Button" parent="Panel/Margin/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "btn_reinstall"

[node name="BtnNo" type="Button" parent="Panel/Margin/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "btn_skip"

[node name="BtnCancel" type="Button" parent="Panel/Margin/VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "btn_cancel"

[connection signal="pressed" from="Panel/Margin/VBox/HBox/BtnYes" to="." method="_on_BtnYes_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/HBox/BtnNo" to="." method="_on_BtnNo_pressed"]
[connection signal="pressed" from="Panel/Margin/VBox/HBox/BtnCancel" to="." method="_on_BtnCancel_pressed"]
